--- a/_viash.yaml
+++ b/_viash.yaml
@@ -3,7 +3,7 @@ viash_version: 0.9.4
 source: src
 target: target
 
-name: openpipeline_incubator
+name: openpipeline_runners
 organization: openpipelines-bio
 
 links:
