deploy: 9c8c76b5fc994ab9b2eb1a2a705677222bf960ae

--- a/_viash.yaml
+++ b/_viash.yaml
@@ -1,7 +1,7 @@
 viash_version: 0.9.4
 source: src
 target: target
-name: openpipeline_incubator
+name: openpipeline_runners
 organization: openpipelines-bio
 links:
   repository: https://github.com/openpipelines-bio/openpipeline_incubator
